// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportGenerate actions should restartProcess 1`] = `
Object {
  "type": "YUPANA/REPORT_GENERATE_PROCESS_RESTART",
}
`;

exports[`ReportGenerate actions should startProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "processID": 3,
        "status": "running",
      },
      "type": "YUPANA/REPORT_GENERATE_PROCESS_START",
    },
  ],
]
`;

exports[`ReportGenerate actions should stopProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "status": "stopped",
      },
      "type": "YUPANA/REPORT_GENERATE_PROCESS_STOP",
    },
  ],
]
`;
